updated json file with correct scripts and dependencies for gh pages. Also, addressed the overflow text issue where the text would flow off the calculator screen

--- a/src/components/CalculatorBase.scss
+++ b/src/components/CalculatorBase.scss
@@ -54,9 +54,17 @@ button:focus {
 }
 
 #answer{
-    margin-right: 12px; 
+    margin-left: 12px; 
     font-size: 5vh;
     font-family: 'Lexend Tera', sans-serif;
+    width: 100%;
+    display: block;
+    word-wrap: break-word;
+    white-space: normal;
+
+  > div {
+    direction: rtl;
+  }
 }
 
 .clear {
